remove unsafe reflection; postpone compiler patching